<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/TableLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TableRow
        android:id="@+id/tableRow1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/X_AXIS"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/textPositionX"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:inputType="numberSigned" >

            <requestFocus />
        </EditText>

        <Button
            android:id="@+id/buttonGoX"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/GO" />

        <Button
            android:id="@+id/button0X"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/SET_ZERO" />

        <Button
            android:id="@+id/buttonHomeX"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/HOME" />

    </TableRow>

    <TableRow
        android:id="@+id/tableRow2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Y_AXIS"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/textPositionY"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:numeric="signed" />

        <Button
            android:id="@+id/buttonGoY"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/GO" />

        <Button
            android:id="@+id/button0Y"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/SET_ZERO" />

        <Button
            android:id="@+id/buttonHomeY"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/HOME" />

    </TableRow>

    <TableRow
        android:id="@+id/tableRow3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Z_AXIS"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/textPositionZ"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="numberSigned" />

        <Button
            android:id="@+id/buttonGoZ"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/GO" />

        <Button
            android:id="@+id/button0Z"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/SET_ZERO" />

        <Button
            android:id="@+id/buttonHomeZ"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/HOME" />

    </TableRow>

    <TableRow
        android:id="@+id/tableRow4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/TEMP"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/textTemp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number" />

        <Button
            android:id="@+id/buttonSetTemp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/SET" />

    </TableRow>

    <TableRow
        android:id="@+id/tableRow5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/FAN"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <ToggleButton
            android:id="@+id/buttonFanToggle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="ToggleButton" />

    </TableRow>

    <TableRow
        android:id="@+id/tableRow6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sd"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <Button
            android:id="@+id/buttonFiles"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/files" />

    </TableRow>

</TableLayout>